Bug 506397 - Impossible to open ledger with keyboard
Summary: Impossible to open ledger with keyboard
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-30 17:10 UTC by Ingo Klöcker
Modified: 2025-07-02 18:20 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ingo Klöcker 2025-06-30 17:10:39 UTC
I don't find a way to open a ledger with the keyboard. The Plus button on the tab bar is inaccessible with the keyboard, e.g. by pressing Tab. I also don't see an action which I could assign a keyboard shortcut to.

In 5.1 I could very conveniently switch between different ledgers using the drop down. Please bring back a way to open a currently not open ledger (maybe like Kate's Quick Open) and to switch to a currently open ledger (maybe like Kate's Ctrl+Tab selection).

STEPS TO REPRODUCE
1. Try to open a ledger that's not already open just with the keyboard.

OBSERVED RESULT
It's impossible.

EXPECTED RESULT
I can easily open a ledger (that's not already open) just with the keyboard.
Comment 1 Thomas Baumgart 2025-07-02 17:21:43 UTC
Git commit 82dbf155535b3fad94eb42450a4a9bff4f89dee4 by Thomas Baumgart.
Committed on 02/07/2025 at 17:20.
Pushed by tbaumgart into branch '5.2'.

Add ledger quick open feature
FIXED-IN: 5.2.1

M  +2    -0    kmymoney/kmymoney.cpp
M  +1    -0    kmymoney/menus/menuenums.h
M  +2    -3    kmymoney/views/simpleledgerview.cpp

https://invent.kde.org/office/kmymoney/-/commit/82dbf155535b3fad94eb42450a4a9bff4f89dee4
Comment 2 Thomas Baumgart 2025-07-02 18:20:57 UTC
Git commit 410b18057bd6407a6ff4cf102adf06633e3600ed by Thomas Baumgart.
Committed on 02/07/2025 at 17:22.
Pushed by tbaumgart into branch 'master'.

Add ledger quick open feature
FIXED-IN: 5.2.1
(cherry picked from commit 82dbf155535b3fad94eb42450a4a9bff4f89dee4)

M  +2    -0    kmymoney/kmymoney.cpp
M  +1    -0    kmymoney/menus/menuenums.h
M  +2    -3    kmymoney/views/simpleledgerview.cpp

https://invent.kde.org/office/kmymoney/-/commit/410b18057bd6407a6ff4cf102adf06633e3600ed