Add ledger quick open feature

BUG: 506397
FIXED-IN: 5.2.1
(cherry picked from commit 82dbf155535b3fad94eb42450a4a9bff4f89dee4)